--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@squirrel-forge/ui-form",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "An async Form component, event based with extensive plugin support, made for the browser and babel compatible.",
   "main": "src/es6/index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "ui",
     "form",
     "async",
+    "custom-events",
     "plugins",
     "es6",
     "babel",
@@ -33,6 +34,6 @@
     "@squirrel-forge/simple-webpack": "^0.9.x"
   },
   "dependencies": {
-    "@squirrel-forge/ui-core": "^0.8.x"
+    "@squirrel-forge/ui-core": "^0.9.x"
   }
 }
